# SmartCalc_V1.0

./: .gitmodules  README.md
src/: CMakeLists.txt  Doxyfile  Makefile  calculation.c  calculator.c  credit.c  main.c  main.cpp  parser.c  resources.qrc  rpn.c  stack.c  stack.h
src/Headers/: calculator.h  credit.h  parser.h  stack.h
src/SmartCalcV1/: main.cpp
src/SmartCalcV1/back/: calculator.c  credit.c  parser.c  rpn.c  stack.c
src/SmartCalcV1/back/headers/: calculator.h  credit.h  includes.h  parser.h  stack.h
src/SmartCalcV1/front/calculator/: input.cpp  mainwindow.cpp  mainwindow.ui  plot.cpp
src/SmartCalcV1/front/credit/: creditcalc.cpp  creditcalc.ui
src/SmartCalcV1/front/headers/: creditcalc.h  mainwindow.h
src/Tests/: test.c  test.h  test_calc_with_x.c  test_hard_equations.c  test_simple_operations.c  test_sqrt_log.c  test_trigonometry.c
src/back/: Makefile  calculator.c  parser.c  stack.c
src/back/headers/: calculator.h  credit.h  includes.h  parser.h  stack.h
src/front/calculator/: input.cpp  mainwindow.cpp  plot.cpp
src/front/credit/: creditcalc.cpp
src/front/headers/: creditcalc.h  mainwindow.h
